--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,11 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         WWW-Mechanize
-version:      0.60
+version:      0.61
 version_from: lib/WWW/Mechanize.pm
 installdirs:  site
 requires:
+    File::Temp:                    0
     FindBin:                       0
     Getopt::Long:                  0
     HTML::Form:                    1
@@ -21,4 +22,4 @@ requires:
     URI::URL:                      0
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+generated_by: ExtUtils::MakeMaker version 6.16
