--- a/META.yml
+++ b/META.yml
@@ -1,25 +1,25 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         WWW-Mechanize
-version:      0.66
+version:      0.69_01
 version_from: lib/WWW/Mechanize.pm
 installdirs:  site
 requires:
     File::Temp:                    0
     FindBin:                       0
     Getopt::Long:                  0
-    HTML::Form:                    1.036
+    HTML::Form:                    1.038
     HTML::HeadParser:              0
     HTML::TokeParser:              2.28
     HTTP::Daemon:                  0
     HTTP::Request:                 1.3
     HTTP::Status:                  0
-    LWP:                           5.72
-    LWP::UserAgent:                2.013
+    LWP:                           5.76
+    LWP::UserAgent:                2.024
     Pod::Usage:                    0
     Test::More:                    0.34
     URI::file:                     0
     URI::URL:                      0
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.21
+generated_by: ExtUtils::MakeMaker version 6.17
