--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         WWW-Mechanize
-version:      1.02
+version:      1.03_01
 version_from: lib/WWW/Mechanize.pm
 installdirs:  site
 requires:
@@ -23,4 +23,4 @@ requires:
     URI::URL:                      0
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.21_03
+generated_by: ExtUtils::MakeMaker version 6.21
