--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
-MYMETA.json
-MYMETA.yml
-Makefile
-blib/
-pm_to_blib
-*.swp
-MANIFEST
+/MYMETA.json
+/MYMETA.yml
+/Makefile
+/Makefile.old
 /.ackrc
+/blib/
+/pm_to_blib
+/_eumm/
+/MANIFEST
+/MANIFEST.bak
+/MANIFEST.SKIP.bak
 !/.gitignore
 /WWW-Mechanize-*/
 /WWW-Mechanize-*.tar.gz
