--- a/dist.ini
+++ b/dist.ini
@@ -14,3 +14,8 @@ match = Changes
 -remove = Test::Perl::Critic
 -remove = Test::PodSpelling
 -remove = Test::Synopsis
+
+[Prereqs]
+-phase = test
+-relationship = requires
+CGI = 4.32
