--- a/dist.ini
+++ b/dist.ini
@@ -11,6 +11,7 @@ encoding = ISO-8859-1
 match = Changes
 
 [@Author::OALDERS]
+-remove = MinimumPerl
 -remove = Test::Perl::Critic
 -remove = Test::PodSpelling
 -remove = Test::Synopsis
