--- a/tidyall.ini
+++ b/tidyall.ini
@@ -1,19 +1,22 @@
-[PerlTidy]
-select = **/*.{pl,pm,t,psgi}
-ignore = t/00-*
-ignore = t/author-*
-ignore = t/release-*
-ignore = blib/**/*
-ignore = .build/**/*
-ignore = WWW-Mechanize-*/**/*
-argv = --profile=$ROOT/perltidyrc
+;[PerlTidy]
+;select = **/*.{pl,pm,t,psgi}
+;ignore = t/00-*
+;ignore = t/author-*
+;ignore = t/release-*
+;ignore = blib/**/*
+;ignore = .build/**/*
+;ignore = WWW-Mechanize-*/**/*
+;argv = --profile=$ROOT/perltidyrc
 
-[PerlCritic]
-select = **/*.{pl,pm,t,psgi}
-ignore = t/00-*
-ignore = t/author-*
-ignore = t/release-*
-ignore = blib/**/*
-ignore = .build/**/*
-ignore = WWW-Mechanize-*/**/*
-argv = --profile $ROOT/perlcriticrc --program-extensions .pl  --program-extensions .t --program-extensions .psgi
+;[PerlCritic]
+;select = **/*.{pl,pm,t,psgi}
+;ignore = t/00-*
+;ignore = t/author-*
+;ignore = t/release-*
+;ignore = blib/**/*
+;ignore = .build/**/*
+;ignore = WWW-Mechanize-*/**/*
+;argv = --profile $ROOT/perlcriticrc --program-extensions .pl  --program-extensions .t --program-extensions .psgi
+
+[SortLines::Naturally]
+select = .gitignore
