Disable Test::CPAN::Changes plugin until release dates in Changes file can be fixed.

--- a/dist.ini
+++ b/dist.ini
@@ -12,6 +12,7 @@ match = Changes
 
 [@Author::OALDERS]
 -remove = MinimumPerl
+-remove = Test::CPAN::Changes ; has invalid release dates
 -remove = Test::Perl::Critic
 -remove = Test::PodSpelling
 -remove = Test::Synopsis
