--- a/dist.ini
+++ b/dist.ini
@@ -7,6 +7,7 @@ copyright_year   = 2004-2016
 version = 1.76
 
 [@Author::OALDERS]
+-remove = CheckChangesHasContent
 -remove = MinimumPerl
 -remove = Test::CPAN::Changes ; has invalid release dates
 -remove = Test::Perl::Critic
