Fix kwalitee issues
meta_yml_has_provides: Add [MetaProvides::Package]
meta_yml_declares_perl_version: Add perl 5.6 as minimum
build_prereq_matches_use: Remove [ExtraTests] which moves xt to t
  Add [RunExtraTests] instead

--- a/dist.ini
+++ b/dist.ini
@@ -13,8 +13,14 @@ version = 1.84
 -remove = Test::Perl::Critic
 -remove = Test::PodSpelling
 -remove = Test::Synopsis
+-remove = ExtraTests
 
-[Prereqs]
--phase = test
--relationship = requires
+[RunExtraTests]
+
+[Prereqs / RuntimeRequires]
+perl = 5.006
+
+[Prereqs / TestRequires]
 CGI = 4.32
+
+[MetaProvides::Package]
