--- a/tidyall.ini
+++ b/tidyall.ini
@@ -1,7 +1,7 @@
 ;[PerlTidy]
 ;select = **/*.{pl,pm,t,psgi}
 ;ignore = t/00-*
-;ignore = t/author-*
+;ignore = xt/*
 ;ignore = t/release-*
 ;ignore = blib/**/*
 ;ignore = .build/**/*
@@ -11,7 +11,7 @@
 ;[PerlCritic]
 ;select = **/*.{pl,pm,t,psgi}
 ;ignore = t/00-*
-;ignore = t/author-*
+;ignore = xt/*
 ;ignore = t/release-*
 ;ignore = blib/**/*
 ;ignore = .build/**/*
