--- a/dist.ini
+++ b/dist.ini
@@ -14,6 +14,9 @@ copyright_year   = 2004-2016
 -remove = Test::Synopsis
 -remove = ExtraTests
 
+[ExecDir]
+dir = bin
+
 [RunExtraTests]
 
 [Prereqs / RuntimeRequires]
