Test::Taint failed to install on Travis for 5.26

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ perl:
 sudo: false
 before_install:
   - eval $(curl https://travis-perl.github.io/init) --auto
-  - cpanm Test::Memory::Cycle Test::Taint
+  - cpanm Test::Memory::Cycle Test::Taint || true
 matrix:
   allow_failures:
     -
