Add Code::TidyAll::Plugin::SortLines::Naturally to development deps

--- a/dist.ini
+++ b/dist.ini
@@ -25,5 +25,8 @@ perl = 5.006
 [Prereqs / TestRequires]
 CGI = 4.32
 
+[Prereqs / DevelopRequires]
+Code::TidyAll::Plugin::SortLines::Naturally = 0.000003
+
 [MetaProvides::Package]
 
