--- a/tidyall.ini
+++ b/tidyall.ini
@@ -1,22 +1,12 @@
-;[PerlTidy]
-;select = **/*.{pl,pm,t,psgi}
-;ignore = t/00-*
-;ignore = xt/*
-;ignore = t/release-*
-;ignore = blib/**/*
-;ignore = .build/**/*
-;ignore = WWW-Mechanize-*/**/*
-;argv = --profile=$ROOT/perltidyrc
+[PerlCritic non-auto-generated xt]
+select = xt/author/live/encoding.t
+select = xt/author/live/wikipedia.t
+argv = --profile=$ROOT/perlcriticrc
 
-;[PerlCritic]
-;select = **/*.{pl,pm,t,psgi}
-;ignore = t/00-*
-;ignore = xt/*
-;ignore = t/release-*
-;ignore = blib/**/*
-;ignore = .build/**/*
-;ignore = WWW-Mechanize-*/**/*
-;argv = --profile $ROOT/perlcriticrc --program-extensions .pl  --program-extensions .t --program-extensions .psgi
+[PerlTidy non-auto-generated xt]
+select = xt/author/live/encoding.t
+select = xt/author/live/wikipedia.t
+argv = --profile=$ROOT/perltidyrc
 
 [SortLines::Naturally]
 select = .gitignore
