Add Perl::Tidy to development prereqs

--- a/dist.ini
+++ b/dist.ini
@@ -27,6 +27,7 @@ CGI = 4.32
 
 [Prereqs / DevelopRequires]
 Code::TidyAll::Plugin::SortLines::Naturally = 0.000003
+Perl::Tidy = 20180220
 
 [MetaProvides::Package]
 
