add test dependency for Perl::Tidy and Perl::Critic

--- a/dist.ini
+++ b/dist.ini
@@ -26,6 +26,8 @@ perl = 5.006
 
 [Prereqs / TestRequires]
 CGI = 4.32
+Perl::Critic = 0
+Perl::Tidy = 0
 
 [Prereqs / DevelopRequires]
 Code::TidyAll::Plugin::SortLines::Naturally = 0.000003
