install LWP::Protocol::https and fix xt/author/live/encoding.t

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ env:
     - RELEASE_TESTING=1
 before_install:
   - eval $(curl https://travis-perl.github.io/init) --auto --always-upgrade-modules
-  - cpanm Test::Memory::Cycle Test::Taint || true
+  - cpanm Test::Memory::Cycle Test::Taint LWP::Protocol::https || true
 ### __app_cisetup__
 # ---
 # force_threaded_perls: 0
