Enable static install

--- a/dist.ini
+++ b/dist.ini
@@ -13,6 +13,8 @@ copyright_year   = 2004-2016
 -remove = Test::PodSpelling
 -remove = Test::Synopsis
 -remove = ExtraTests
+StaticInstall.mode = on
+StaticInstall.dry_run = 0
 
 [ExecDir]
 dir = script
