Add Test::Memory::Cycle to develop prereqs

--- a/dist.ini
+++ b/dist.ini
@@ -32,6 +32,7 @@ CGI = 4.32
 Code::TidyAll::Plugin::SortLines::Naturally = 0.000003
 Perl::Critic = 0
 Perl::Tidy = 0
+Test::Memory::Cycle = 1.06
 
 [MetaProvides::Package]
 
