--- a/dist.ini
+++ b/dist.ini
@@ -30,6 +30,7 @@ CGI = 4.32
 
 [Prereqs / DevelopRequires]
 Code::TidyAll::Plugin::SortLines::Naturally = 0.000003
+LWP::Protocol::https = 6.07
 Perl::Critic = 0
 Perl::Tidy = 0
 Test::Memory::Cycle = 1.06
