--- a/dist.ini
+++ b/dist.ini
@@ -3,7 +3,7 @@ author  = Andy Lester <andy at petdance.com>
 license = Perl_5
 main_module = lib/WWW/Mechanize.pm
 copyright_holder = Andy Lester
-copyright_year   = 2004-2016
+copyright_year   = 2004
 
 [@Author::OALDERS]
 -remove = CheckChangesHasContent
