Add Test::Taint to develop requires

--- a/dist.ini
+++ b/dist.ini
@@ -33,5 +33,6 @@ LWP::Protocol::https = 6.07
 Perl::Critic = 0
 Perl::Tidy = 0
 Test::Memory::Cycle = 1.06
+Test::Taint = 1.08
 
 [MetaProvides::Package]
