--- a/dist.ini
+++ b/dist.ini
@@ -33,6 +33,7 @@ LWP::Protocol::https = 6.07
 Perl::Critic = 0
 Perl::Tidy = 0
 Test::Memory::Cycle = 1.06
+Test::NoWarnings = 1.04
 Test::Taint = 1.08
 
 [MetaProvides::Package]
