--- a/dist.ini
+++ b/dist.ini
@@ -27,6 +27,7 @@ Scalar::Util = 1.14
 
 [Prereqs / TestRequires]
 CGI = 4.32
+HTTP::Daemon = 6.12
 
 [Prereqs / DevelopRequires]
 LWP::Protocol::https = 6.07
