Avoid stringy eval
With this change dzil starts finding Compress::Zlib as a dependency, so
soften the prereq in order not to introduce a new required dependency.

--- a/dist.ini
+++ b/dist.ini
@@ -37,4 +37,8 @@ LWP::Protocol::https = 6.07
 Perl::Critic = 0
 Perl::Tidy = 0
 
+[Prereqs::Soften]
+module = Compress::Zlib
+to_relationship = recommends
+
 [MetaProvides::Package]
