--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -105,9 +105,9 @@ jobs:
     needs: test-linux
     runs-on: macos-latest
     strategy:
+      fail-fast: true
       matrix:
         perl-version:
-          - "5.12"
           - "5.14"
           - "5.16"
           - "5.18"
