Add License, CPAN and kwalitee badges to README

--- a/dist.ini
+++ b/dist.ini
@@ -39,3 +39,11 @@ module = Compress::Zlib
 to_relationship = recommends
 
 [MetaProvides::Package]
+
+[GitHubREADME::Badge]
+badges = license
+badges = version
+badges = cpants
+place = top
+phase = build
+branch = master
