Fix test failure after release of HTTP::Message 7.01

--- a/dist.ini
+++ b/dist.ini
@@ -25,6 +25,7 @@ dir = script
 [Prereqs / RuntimeRequires]
 perl = 5.008
 HTML::Form = 6.08
+HTTP::Message = 7.01
 
 [Prereqs / TestRequires]
 HTTP::Daemon = 6.12
